Dialer: Update for CustomAutoResizeTextView
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/java/com/android/incallui/answer/impl/res/layout/fragment_incoming_call_fullscreen_photo.xml
+++ b/java/com/android/incallui/answer/impl/res/layout/fragment_incoming_call_fullscreen_photo.xml
@@ -101,7 +101,7 @@
 
         <!-- We have to keep deprecated singleLine to allow long text being truncated with ellipses.
              b/31396406 -->
-        <com.android.incallui.autoresizetext.AutoResizeTextView
+        <com.android.incallui.autoresizetext.CustomAutoResizeTextView
             android:id="@id/contactgrid_contact_name"
             android:layout_width="match_parent"
             android:layout_height="72dp"
@@ -114,9 +114,7 @@
             android:singleLine="false"
             android:textAppearance="@style/Dialer.Incall.TextAppearance.Large"
             android:textSize="@dimen/answer_contact_name_text_size"
-            app:resizing_text_min_size="@dimen/answer_contact_name_min_size"
-            tools:ignore="Deprecated"
-            tools:text="Jake Peralta"/>
+            app:resizing_text_min_size="@dimen/answer_contact_name_min_size"/>
 
         <include
             android:id="@id/contactgrid_bottom_row"
