--- a/java/com/android/incallui/incall/impl/res/layout/frag_incall_voice_fullscreen_photo.xml
+++ b/java/com/android/incallui/incall/impl/res/layout/frag_incall_voice_fullscreen_photo.xml
@@ -57,7 +57,7 @@
 
         <!-- We have to keep deprecated singleLine to allow long text being truncated with ellipses.
                    b/31396406 -->
-        <com.android.incallui.autoresizetext.AutoResizeTextView
+        <com.android.incallui.autoresizetext.CustomAutoResizeTextView
             android:id="@id/contactgrid_contact_name"
             android:layout_width="match_parent"
             android:layout_height="72dp"
@@ -73,9 +73,7 @@
             android:singleLine="false"
             android:textAppearance="@style/Dialer.Incall.TextAppearance.Large"
             android:textSize="@dimen/answer_contact_name_text_size"
-            app:resizing_text_min_size="@dimen/answer_contact_name_min_size"
-            tools:text="Jake Peralta"
-            tools:ignore="Deprecated"/>
+            app:resizing_text_min_size="@dimen/answer_contact_name_min_size"/>
 
         <include
             layout="@layout/incall_contactgrid_bottom_row"
