--- a/java/com/android/dialer/calllog/ui/res/values-night/colors.xml
+++ b/java/com/android/dialer/calllog/ui/res/values-night/colors.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2012 The Android Open Source Project
+  ~ Copyright (C) 2018 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -12,18 +13,13 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License
--->
+  -->
 
 <resources>
-  <color name="nav_item">#80FFFFFF</color>
-  <color name="nav_item_selected">#FFFFFF</color>
+  <!-- TODO(a bug): remove these? -->
+  <color name="feature_icon_read_color">#9E9E9E</color>
+  <color name="feature_icon_unread_color">#777777</color>
 
-  <color name="voicemail_icon_disabled_tint">#80ffffff</color>
-
-  <!-- Text color for the "Remove" text when a contact is dragged on top of the remove view -->
-  <color name="remove_highlighted_text_color">#FF3F3B</color>
-
-  <!--  Colors for blocked numbers list -->
-  <color name="blocked_number_block_color">#F44336</color>
-
+  <color name="call_type_icon_read_color">#757575</color>
+  <color name="call_type_icon_unread_color">#D32F2F</color>
 </resources>
