--- a/java/com/android/dialer/theme/common/res/values-night/colors.xml
+++ b/java/com/android/dialer/theme/common/res/values-night/colors.xml
@@ -18,4 +18,5 @@
 <resources>
   <!-- Settings -->
   <color name="dialer_settings_theme_color_dark">#1C3AA9</color>
+  <color name="dialer_divider_line_color">#282828</color>
 </resources>
