Dialer: Use system fonts
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/java/com/android/dialer/app/res/values-night/styles.xml
+++ b/java/com/android/dialer/app/res/values-night/styles.xml
@@ -165,6 +165,6 @@
 
   <style name="PromoLinkStyle">
     <item name="android:textColor">?android:attr/colorPrimary</item>
-    <item name="android:fontFamily">"sans-serif-medium"</item>
+    <item name="android:fontFamily">"@*android:string/config_headlineFontFamilyMedium"</item>
   </style>
 </resources>
