--- a/java/com/android/dialer/main/impl/bottomnav/res/layout/bottom_nav_item.xml
+++ b/java/com/android/dialer/main/impl/bottomnav/res/layout/bottom_nav_item.xml
@@ -50,7 +50,8 @@
         android:textSize="12sp"
         android:textColor="?android:attr/textColorPrimaryInverse"
         android:background="@drawable/notification_badge"
-        android:fontFamily="sans-serif-medium"/>
+        android:fontFamily="@*android:string/config_headlineFontFamilyMedium"/>
+        
   </FrameLayout>
 
   <FrameLayout
@@ -64,8 +65,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
-      android:textSize="15sp"
-      style="@style/Dialer.TextAppearance.Primary"/>
+      android:textSize="12sp"
+      style="@style/Dialer.TextAppearance.Secondary"/>
 
   </FrameLayout>
 
