Dialer: revamp with OOS like UI
- Imported OOS empty page illustrations
- Added OOS Icons
- Redesigned Incall UI like OOS
- Redesigned Incoming call UI like OOS
- Moved dialer fab icon in center to give OOS look
- Fixed theming issues with nezuko ui to match OOS

Co-authored-by: Rahul <rahul731999@gmail.com>

--- a/java/com/android/dialer/theme/hidden/res/values/colors_dialer_light.xml
+++ b/java/com/android/dialer/theme/hidden/res/values/colors_dialer_light.xml
@@ -15,7 +15,7 @@
   -->
 <resources>
   <!-- Essential theme colors -->
-  <color name="dialer_theme_color">#2A56C6</color>
+  <color name="dialer_theme_color">@color/dndndn</color>
   <color name="dialer_theme_color_20pct">#332A56C6</color>
   <color name="dialer_theme_color_dark">@color/dialer_background_color</color>
   <color name="dialer_secondary_color">#F50057</color>
