--- a/java/com/android/dialer/theme/hidden/res/values/colors_pallet.xml
+++ b/java/com/android/dialer/theme/hidden/res/values/colors_pallet.xml
@@ -14,22 +14,22 @@
   ~ limitations under the License
   -->
 <resources>
-  <color name="google_blue_900">#174EA6</color>
-  <color name="google_blue_800">#185ABC</color>
-  <color name="google_blue_700">#1967D2</color>
-  <color name="google_blue_600">#1A73E8</color>
-  <color name="google_blue_500">#4285F4</color>
-  <color name="google_blue_100">#D2E3FC</color>
-  <color name="google_blue_50">#E8F0FE</color>
+  <color name="google_blue_900">@*android:color/material_grey_900</color>
+  <color name="google_blue_800">@*android:color/material_grey_850</color>
+  <color name="google_blue_700">@*android:color/material_grey_850</color>
+  <color name="google_blue_600">@*android:color/material_grey_600</color>
+  <color name="google_blue_500">@*android:color/material_grey_600</color>
+  <color name="google_blue_100">@*android:color/material_grey_100</color>
+  <color name="google_blue_50">@*android:color/material_grey_50</color>
 
-  <color name="google_grey_900">#202124</color>
-  <color name="google_grey_800">#3C4043</color>
-  <color name="google_grey_700">#5F6368</color>
-  <color name="google_grey_600">#80868B</color>
-  <color name="google_grey_500">#9AA0A6</color>
-  <color name="google_grey_400">#BDC1C6</color>
-  <color name="google_grey_300">#DADCE0</color>
-  <color name="google_grey_200">#E8EAED</color>
-  <color name="google_grey_100">#F1F3F4</color>
-  <color name="google_grey_50">#F8F9FA</color>
+  <color name="google_grey_900">@*android:color/material_grey_900</color>
+  <color name="google_grey_800">@*android:color/material_grey_850</color>
+  <color name="google_grey_700">@*android:color/material_grey_850</color>
+  <color name="google_grey_600">@*android:color/material_grey_600</color>
+  <color name="google_grey_500">@*android:color/material_grey_600</color>
+  <color name="google_grey_400">@*android:color/material_grey_300</color>
+  <color name="google_grey_300">@*android:color/material_grey_300</color>
+  <color name="google_grey_200">@*android:color/material_grey_200</color>
+  <color name="google_grey_100">@*android:color/material_grey_100</color>
+  <color name="google_grey_50">@*android:color/material_grey_50</color>
 </resources>
