Dialer: Improvise dialer text for dark theme/background
* This is required after removing faulty colors_palette to fix dark on dark text.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/java/com/android/dialer/theme/base/res/values/theme_dialer_light.xml
+++ b/java/com/android/dialer/theme/base/res/values/theme_dialer_light.xml
@@ -51,8 +51,8 @@
     <!-- These values should be used to set text color. -->
     <item name="android:textColorPrimary">@color/dialer_primary_text_color</item>
     <item name="android:textColorSecondary">@color/dialer_secondary_text_color</item>
-    <item name="android:textColorPrimaryInverse">@color/google_grey_300</item>
-    <item name="android:textColorSecondaryInverse">@color/google_grey_400</item>
+    <item name="android:textColorPrimaryInverse">@color/dialer_dark_primary_text_color</item>
+    <item name="android:textColorSecondaryInverse">@color/dialer_dark_secondary_text_color</item>
     <item name="android:textColorHint">@color/google_grey_600</item>
 
     <!-- These will be automatically used to color most Appcompat/Material widgets. -->
