--- a/java/com/android/dialer/main/impl/toolbar/res/layout/toolbar_layout.xml
+++ b/java/com/android/dialer/main/impl/toolbar/res/layout/toolbar_layout.xml
@@ -37,17 +37,28 @@
           android:layout_gravity="center_vertical"
           android:gravity="center_vertical">
 
+        <ImageView
+            android:id="@+id/search_magnifying_glass"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_centerVertical="true"
+            android:importantForAccessibility="no"
+            android:scaleType="center"
+            android:src="@drawable/quantum_ic_search_vd_theme_24"
+            android:tint="?colorIcon"/>
 
         <TextView
-            android:id="@+id/okand"
+            android:id="@+id/search_box_start_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:text="@string/applicationLabel"
-            android:textSize="25dp"
-            style="@style/Dialer.TextAppearance.Primary"/>
+            android:layout_toEndOf="@+id/search_magnifying_glass"
+            android:layout_toStartOf="@+id/voice_search_button"
+            android:text="@string/dialer_hint_find_contact"
+            android:textSize="16dp"
+            style="@style/Dialer.TextAppearance.Secondary"/>
 
         <ImageView
             android:id="@+id/voice_search_button"
@@ -57,21 +68,8 @@
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/description_start_voice_search"
             android:scaleType="center"
-            android:visibility="invisible"
-            android:src="@drawable/quantum_ic_mic_vd_theme_24"/>
-
-
-        <ImageView
-            android:id="@+id/search_magnifying_glass"
-            android:layout_width="48dp"
-            android:layout_toStartOf="@+id/main_options_menu_button"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_centerVertical="true"
-            android:importantForAccessibility="no"
-            android:scaleType="center"
-            android:src="@drawable/quantum_ic_search_op"/>
-
+            android:src="@drawable/quantum_ic_mic_vd_theme_24"
+            android:tint="?colorIcon"/>
 
         <ImageButton
             android:id="@+id/main_options_menu_button"
@@ -81,22 +79,8 @@
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/action_menu_overflow_description"
             android:scaleType="center"
-            android:src="@drawable/quantum_ic_more_vert_vd_theme_24"/>
-
-        <TextView
-            android:id="@+id/search_box_start_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/voice_search_button"
-            android:layout_toStartOf="@+id/search_magnifying_glass"
-            android:text=""
-            android:visibility="gone"
-            android:textSize="16dp"
-            style="@style/Dialer.TextAppearance.Secondary"/>
-
-
+            android:src="@drawable/quantum_ic_more_vert_vd_theme_24"
+            android:tint="?colorIcon"/>
       </RelativeLayout>
 
       <include layout="@layout/expanded_search_bar"/>
